# MPLayers

./: LICENSE  README.md  datasets  experiments  generate.sh  main.py  mean_field.py  mpnet.py  options.py  pretrained  run.sh  test.sh  train.sh
MPLayers/: MP_module.py  common.cpp  common.h  commonCUDA.cuh  compile.sh  extra_exp_edge_weights.py  extra_exp_edge_weights_bak.py  extra_exp_naive_ISGM.py  main.py  main_old.py  run_all.sh  run_all_sbatch.sh  run_isgmr_single.sh  run_main.sh  run_test_parallel_grad.sh  setup.py  test_compute_terms.py  test_parallel_grad.py
MPLayers/ISGMR/: ISGMR.cpp  ISGMR.h  ISGMR_backward.cu  ISGMR_forward.cu
MPLayers/TRWP/: TRWP.cpp  TRWP.h  TRWP_backward.cu
MPLayers/TRWP_hard_soft/: TRWP.cpp  TRWP.h  TRWP_backward.cu  TRWP_backward_soft.cu  TRWP_forward_soft.cu
MPLayers/aux/: CMakeLists.txt  aux.h
MPLayers_soft/: __init__.py  main.py  main_unused.py  run.sh  run_unused.sh
MPLayers_soft/cuda/: CMakeLists.txt  common.h  commonCUDA.cuh  compile.sh  main.cpp  setup.py  setup_seg.py  (+1 more)
dataloaders/: __init__.py  custom_transforms.py
experiments/: README.md
matlab/: main.m  readpfm.m
modeling/: aspp.py  decoder.py  deeplab.py
pretrained/: README.md
pytorch/: MP_module.py  MP_module_hard_soft.py  MP_module_manual.py  message_passing.py  test_compute_terms.py  test_multi_batch.py
tools/: README.md
trash/: run_all_old.sh  train.sh
utils/: __init__.py  calculate_weights.py  edge_weights.py  label_context.py  loss.py  lr_scheduler.py  model_init.py  mypath.py  saver.py  test_bn.py  test_filters.py  visualize.py
(+37 files in other folders)
